[tool.poetry]
name = "core"
version = "8.2.0"
description = "CORE Common Open Research Emulator"
authors = ["Boeing Research and Technology"]
license = "BSD-2-Clause"
repository = "https://github.com/coreemu/core"
documentation = "https://coreemu.github.io/core/"
include = [
    "core/api/grpc/*",
    "core/configservices/*/templates",
    "core/constants.py",
    "core/gui/data/**/*",
]
exclude = ["core/constants.py.in"]


[tool.poetry.dependencies]
python = "^3.6"
dataclasses = { version = "*", python = "~3.6" }
fabric = "2.5.0"
grpcio = "1.27.2"
invoke = "1.4.1"
lxml = "4.6.5"
mako = "1.1.3"
netaddr = "0.7.19"
pillow = "8.3.2"
protobuf = "3.19.4"
pyproj = "2.6.1.post1"
pyyaml = "5.4"

[tool.poetry.dev-dependencies]
black = "==19.3b0"
flake8 = "3.8.2"
grpcio-tools = "1.27.2"
isort = "4.3.21"
mock = "4.0.2"
pre-commit = "2.1.1"
pytest = "5.4.3"

[tool.isort]
skip_glob = "*_pb2*.py,doc,build"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[tool.black]
line_length = 88
exclude = ".+_pb2.*.py|doc/|build/|__pycache__/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

