[tool.poetry]
name = "core"
version = "9.2.0"
description = "CORE Common Open Research Emulator"
authors = ["Boeing Research and Technology"]
license = "BSD-2-Clause"
repository = "https://github.com/coreemu/core"
documentation = "https://coreemu.github.io/core/"
include = [
    "core/api/grpc/*",
    "core/services/defaults/*/templates",
    "core/constants.py",
    "core/gui/data/**/*",
]
exclude = ["core/constants.py.in"]

[tool.poetry.scripts]
core-daemon = "core.scripts.daemon:main"
core-cli = "core.scripts.cli:main"
core-gui = "core.scripts.gui:main"
core-player = "core.scripts.player:main"
core-route-monitor = "core.scripts.routemonitor:main"
core-service-update = "core.scripts.serviceupdate:main"
core-cleanup = "core.scripts.cleanup:main"

[tool.poetry.dependencies]
python = "^3.12"
fabric = "3.2.2"
grpcio = "1.69.0"
invoke = "2.2.0"
lxml = "5.2.2"
netaddr = "0.7.19"
protobuf = "5.29.3"
pyproj = "3.6.1"
Mako = "1.2.3"
PyYAML = "6.0.1"
pillow = "11.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
grpcio-tools = "1.69.0"
black = "22.12.0"
flake8 = "7.1.1"
isort = {version = "5.13.2", extras = ["pyproject"]}
mock = "4.0.2"
pre-commit = "4.1.0"

[tool.isort]
skip_glob = "*_pb2*.py,doc,build"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[tool.black]
line_length = 88
exclude = ".+_pb2.*.py|doc/|build/|__pycache__/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

